# wgnet

./: Cargo.toml  README.md  build.rs
example/: client.yaml
example/tmp/: server.yml
proto/: api.proto
src/: api.rs  client.rs  main.rs  server.rs  utils.rs  wg.rs
src/config/: client.rs  invite.rs  mod.rs  server.rs  wg.rs
