[package]
name = "wgnet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wgnet_old"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.150"
serde_yaml = "0.9.14"
serde_json = "1.0.89"
toml = "0.5.9"
base64 = "0.20.0"
wireguard-control = "1.5.0"
curve25519-dalek = { version = "=4.0.0-pre.2", optional = true }
anyhow = "1.0.66"
log = "0.4.17"
ipnet = { version = "2.5.1", features = ["serde"] }
tonic = "0.8.3"
prost = "0.11.3"
prost-serde = "0.3.0"
tokio = { version = "1.23.0", features = ["full"] }
map-macro = "0.2.5"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.4"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.3"
netlink-packet-core = "0.4.2"
netlink-packet-generic = "0.3.1"
netlink-packet-route = "0.13.0"
